# portfolio

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  index.html  main.css  package-lock.json  package.json
src/: bottombar.rs  icon.rs  main.rs  maincontent.rs  menubar.rs  sidebar.rs
src/highlighter/: language.rs  lexer.rs  mod.rs
src/highlighter/dockerfile/: mod.rs
src/highlighter/shell/: mod.rs
src/highlighter/yaml/: mod.rs
src/hook/: mod.rs
src/state/: cluster.rs  editor.rs  mod.rs  technology.rs
src/state/ops/: contributions.sh  main.yaml  multi-impact.Dockerfile  otomny.tf  self-hosted.yaml
